--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -3,8 +3,8 @@
     <div class="menu">
       <ul>
           <li><a href="{{ site.url }}">home</a></li>
-          <!-- <li><a href="{{ site.baseurl }}blog/">blog</a></li>
-          <li><a href="{{ site.baseurl }}casts">*casts</a></li> -->
+          <li><a href="{{ site.url }}blog/">blog</a></li>
+          <li><a href="{{ site.url }}casts">*casts</a></li>
       </ul>
     </div>
   </div>
