--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,8 +18,8 @@
 
     {% include analytics.html %}
 
-    <link rel="shortcut icon" href="{{ site.baseurl }}images/favicon.jpg">
+    <link rel="shortcut icon" href="{{ site.url }}images/favicon.ico">
 
-    <link rel="alternate" type="application/atom+xml" title="Atom Feed" href="{{ site.baseurl }}feed/">
+    <link rel="alternate" type="application/atom+xml" title="Atom Feed" href="{{ site.url }}feed/">
 
 </head>
