--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="row">
   <div class="col-lg-8 col-lg-offset-2">
-    <h1 class="">{{ site.nick }}</h1>
+    <h1 class="">{{ site.title }}</h1>
     <p>
     <span class="reserved">char</span> szNickname[<span class="number">3</span>] = <span class="string">"{{ site.nick }}"</span>;
     </p>
