--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -4,7 +4,7 @@
       <ul>
           <li><a href="{{ site.url }}">home</a></li>
           <li><a href="{{ site.url }}blog/">blog</a></li>
-          <li><a href="{{ site.url }}casts">*casts</a></li>
+          <!-- <li><a href="{{ site.url }}casts">*casts</a></li> -->
       </ul>
     </div>
   </div>
