--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,10 +5,10 @@
     <span class="reserved">std::string</span> szNickname { <span class="string">"{{ site.nick }}"</span> };
     </p>
     <p>
-    std::printf( <a href="https://{{ site.source_code.server }}/{{ site.source_code.nick }}" target="_blank"><span class="string">"https://{{ site.source_code.server }}/<span class="reserved">%s\n</span>"</span></a>, szNickname );
+    std::printf( <a href="https://{{ site.source_code.server }}/{{ site.source_code.nick }}" target="_blank"><span class="string">"https://{{ site.source_code.server }}/<span class="reserved">%s\n</span>"</span></a>, szNickname.c_str() );
     </p>
     <p>
-    std::printf( <a href="mailto:{{ site.nick }}@{{ site.mail.domain }}.{{ site.mail.ext }}" target="_blank"><span class="string">"<span class="reserved">%s\x40</span>{{ site.mail.domain }}<span class="reserved">\x2e\\\b</span>{{ site.mail.ext }}<span class="reserved">\n</span>"</span></a>, szNickname );
+    std::printf( <a href="mailto:{{ site.nick }}@{{ site.mail.domain }}.{{ site.mail.ext }}" target="_blank"><span class="string">"<span class="reserved">%s\x40</span>{{ site.mail.domain }}<span class="reserved">\x2e\\\b</span>{{ site.mail.ext }}<span class="reserved">\n</span>"</span></a>, szNickname.c_str() );
     </p>
     <!-- <p>
             printf(<a href="https://{{ site.blog.nick }}.{{ site.blog.server }}" target="_blank"><span class="string">"https://<span class="reserved">%s</span>.{{ site.blog.server }}<span class="reserved">\n</span>"</span></a>,nick);
