--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ layout: page
   </article>
 
 	<p class="feed-recomendation">
-		Gostou do post? Assina o <a href="{{ site.baseurl }}feed/">feed</a> e seja feliz!!
+    Did you liked the post? Subscribe to the <a href="{{ site.baseurl }}feed/">feed</a>.
 	</p>
 
   {% include disqus.html %}
