--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ layout: page
   </article>
 
 	<p class="feed-recomendation">
-    Did you liked the post? Subscribe to the <a href="{{ site.baseurl }}feed/">feed</a>.
+    Did you liked the post? Subscribe to the <a href="{{ site.url }}feed/">feed</a>.
 	</p>
 
   {% include disqus.html %}
