--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,4 +1,4 @@
-<!-- Google Anaalytics counter -->
+<!-- Google Analytics counter -->
 <script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -9,7 +9,7 @@
     ga('send', 'pageview');
 
 </script>
-<!-- /Google Anaalytics counter -->
+<!-- /Google Analytics counter -->
 
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
