--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Reversing.AC is personal site of Konstantin 'cpz' L. Contains blog where you can find post about reversing games and etc." />
-    <meta property="og:title" content="/" />
+    <meta property="og:title" content="-" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:description" content="Reversing.AC is personal site of Konstantin 'cpz' L. Contains blog where you can find post about reversing games and etc." />
     <meta property="og:site_name" content="{{site.title}}" />
