--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,10 +2,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Reversing.AC is personal site of Konstantin 'cpz' L. Contains blog where you can find post about reversing games and etc." />
+    <meta name="description" content="Reversing.AC is personal site of Konstantin 'cpz' L. Contains blog where you can find posts about reversing games and etc." />
     <meta property="og:title" content="-" />
     <meta property="og:locale" content="en_US" />
-    <meta property="og:description" content="Reversing.AC is personal site of Konstantin 'cpz' L. Contains blog where you can find post about reversing games and etc." />
+    <meta property="og:description" content="Reversing.AC is personal site of Konstantin 'cpz' L. Contains blog where you can find posts about reversing games and etc." />
     <meta property="og:site_name" content="{{site.title}}" />
 
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
