--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,4 +6,4 @@
   </div>
 </div>
 
-<!-- Powered by Jykell & Github Pages. Theme made by gildasio.gitlab.io -->
+<!-- Powered by Jekyll & Github Pages. Theme made by gildasio.gitlab.io -->
