--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,6 +10,9 @@
     <p>
     std::printf( <a href="mailto:{{ site.nick }}@{{ site.mail.domain }}.{{ site.mail.ext }}" target="_blank"><span class="string">"<span class="reserved">%s\x40</span>{{ site.mail.domain }}<span class="reserved">\x2e\\\b</span>{{ site.mail.ext }}<span class="reserved">\n</span>"</span></a>, Nickname.c_str() );
     </p>
+    <p>
+    std::printf( <a href="https://{{ site.twitter.server }}/{{ site.twitter.nick }}" target="_blank"><span class="string">"https://{{ site.twitter.server }}/<span class="reserved">dg_%s\n</span>"</span></a>, Nickname.c_str() );
+    </p>
     <!-- <p>
             printf(<a href="https://{{ site.blog.nick }}.{{ site.blog.server }}" target="_blank"><span class="string">"https://<span class="reserved">%s</span>.{{ site.blog.server }}<span class="reserved">\n</span>"</span></a>,nick);
         </p>
